# fedleave

./: .gitignore  .pyinstaller_chart_entry.py  .pyinstaller_entry.py  .pyinstaller_sick_chart_entry.py  CHANGELOG.md  Makefile  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: ci.yml
.pyinstaller-build/fedleave/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-fedleave.txt  xref-fedleave.html
.pyinstaller-spec/: fedleave.spec
annual_leave_chart/: __init__.py  __main__.py  chart.py
fedleave/: charts.py  cli.py  cli_helpers.py  config.py  holidays.py  ledger.py  payperiods.py  reports.py  storage.py  validation.py
scripts/: build_pyinstaller.ps1  build_pyinstaller.sh  ci_generate_report.py  generate_templates.py
sick_leave_chart/: __init__.py  __main__.py  chart.py
templates/: report_template.odt
tests/: test_accruals_pay_period.py  test_authoritative_add.py  test_chart_fedleave_discovery.py  test_cli_validate.py  test_companion_apps_smoke.py  test_config_default_data_dir.py  test_config_init.py  test_config_sanitization.py  test_correct_by_date.py  test_corrections.py  test_daily_balance.py  test_date_to_leave_year_resolution.py  test_export_import.py  test_holidays.py  test_holidays_import.py  test_json_output.py  test_ledger_validation.py  test_payperiods.py  test_reconcile.py  test_reports.py  test_reports_summary.py  test_rollover.py  test_rollover_rules.py  test_starting_balance.py  test_transaction_id_output.py  test_validation_helpers.py  test_void.py
